docs-archive/apache-airflow-providers-opsgenie/3.0.0/_sources/_api/airflow/providers/opsgenie/hooks/opsgenie/index.rst.txt
:py:mod:`airflow.providers.opsgenie.hooks.opsgenie`
===================================================

.. py:module:: airflow.providers.opsgenie.hooks.opsgenie


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.opsgenie.hooks.opsgenie.OpsgenieAlertHook




.. py:class:: OpsgenieAlertHook(opsgenie_conn_id: str = 'opsgenie_default')

   Bases: :py:obj:`airflow.hooks.base.BaseHook`

   This hook allows you to post alerts to Opsgenie.
   Accepts a connection that has an Opsgenie API key as the connection's password.
   This hook sets the domain to conn_id.host, and if not set will default
   to ``https://api.opsgenie.com``.

   Each Opsgenie API key can be pre-configured to a team integration.
   You can override these defaults in this hook.

   :param opsgenie_conn_id: The name of the Opsgenie connection to use
   :type opsgenie_conn_id: str


   .. py:attribute:: conn_name_attr
      :annotation: = opsgenie_conn_id

      

   .. py:attribute:: default_conn_name
      :annotation: = opsgenie_default

      

   .. py:attribute:: conn_type
      :annotation: = opsgenie

      

   .. py:attribute:: hook_name
      :annotation: = Opsgenie

      

   .. py:method:: get_conn(self) -> opsgenie_sdk.AlertApi

      Get the underlying AlertApi client

      :return: AlertApi client
      :rtype: opsgenie_sdk.AlertApi


   .. py:method:: create_alert(self, payload: Optional[dict] = None) -> opsgenie_sdk.SuccessResponse

      Create an alert on Opsgenie

      :param payload: Opsgenie API Create Alert payload values
          See https://docs.opsgenie.com/docs/alert-api#section-create-alert
      :type payload: dict
      :return: api response
      :rtype: opsgenie_sdk.SuccessResponse


   .. py:method:: close_alert(self, identifier: str, identifier_type: Optional[str] = 'id', payload: Optional[dict] = None, kwargs: Optional[dict] = None) -> opsgenie_sdk.SuccessResponse

      Close an alert in Opsgenie

      :param identifier: Identifier of alert which could be alert id, tiny id or alert alias
      :type identifier: str
      :param identifier_type: Type of the identifier that is provided as an in-line parameter.
          Possible values are 'id', 'alias' or 'tiny'
      :type identifier_type: str
      :param payload: Request payload of closing alert action.
          see https://github.com/opsgenie/opsgenie-python-sdk/blob/master/docs/AlertApi.md#close_alert
      :type payload: dict
      :param kwargs: params to pass to the function
      :type kwargs: dict
      :return: SuccessResponse
               If the method is called asynchronously,
               returns the request thread.
      :rtype: opsgenie_sdk.SuccessResponse



